applying new changes for the new version of the messaging API
