# docs/specs/swagger.yaml
@@ -1,115 +1,117 @@
-swagger: "2.0"
+openapi: 3.0.3
 info:
-  description: "This component is in charge of monitoring and solving the inconsistencies generated by the loss of notifications about purchasing events. See the full project here [fury_credit-card-purchases-consist](https://github.com/mercadolibre/fury_credit-card-purchases-consist)"
-  version: "0.0.0"
-  title: "CryptoBot Messaging API"
+  title: CryptoBot - Messaging
+  description: API encargada de las comunicaciónes entre los demás componentes del CryptoBot y los usuarios a través de Telegram o Correo electrónico
+  version: 0.2.0
 paths:
-
-  /messages/update:
+  /messaging/message/diffuse:
     post:
-      summary: "Exposed endpoint used to push new messages sent by the user"
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - in: "body"
-          name: "UpdateMessage"
-          required: true
-          schema:
-            $ref: "#/definitions/UpdateMessageSchema"
+      tags:
+        - Messages
+      summary: Diffuse a message to the client users
+      description: Enabled Endpoint for diffusing messages to the client users. Only available for the admin user.sql.
+      requestBody:
+        description: diffusion message
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Diffusion'
+        required: true
       responses:
         '200':
-          description: OK
-
-  /messages/news/send:
-    post:
-      summary: "Exposed endpoint used to send crypto news messages to a user"
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - in: "body"
-          name: "NewsMessage"
-          required: true
-          schema:
-            $ref: "#/definitions/NewsMessage"
-      responses:
-        '200':
-          description: OK
+          description: Diffusion sent
         '500':
-          description: Internal server error
-          schema:
-            $ref: "#/definitions/InternalServerErrorResponse"
-definitions:
-  UpdateMessageSchema:
-    type: "object"
-    properties:
-      update_id:
-        type: "integer"
-        format: "int64"
-        example: 1351
-      message:
-        $ref: "#/definitions/Message"
+          description: Internal error sending diffusion
+  /messaging/message/send:
+    post:
+      tags:
+        - Messages
+      summary: Send message to a user.sql
+      description: Enabled enpoint to send a message to a specified user.sql
+      requestBody:
+        description: body for sending a message
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SingleMessage'
+        required: true
+      responses:
+        '200':
+          description: Message sent successfully
+        '500':
+          description: Internal error sending message
+  /messaging/account/event:
+    post:
+      tags:
+        - Consumers
+      summary: New account event
+      description: Endpoint for processing account events.
+      requestBody:
+        description: PubSub Event notification body. The data field comes encrypted in base64
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AccountPubSubEvent'
+        required: true
 
-  Message:
-    type: "object"
-    properties:
-      message_id:
-        type: "integer"
-        format: "int 64"
-        example: 23965
-      chat:
-        $ref: "#/definitions/Chat"
-      text:
-        type: "string"
-        format: "string"
-        example: "Hi crypto bot!"
+      responses:
+        '200':
+          description: account saved/deleted/edited
+        '208':
+          description: account already exists
+        '500':
+          description: Error saving/editing/deleting account
+components:
+  schemas:
+    SingleMessage:
+      type: object
+      properties:
+        chat_id:
+          type: integer
+          example: 1801261524
+        message:
+          type: string
+          example: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis hendrerit facilisis. Aenean sit amet arcu nec urna laoreet vehicula nec eget est. Phasellus velit eros, tincidunt vitae magna ac, sagittis auctor massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus porttitor non mi eget posuere."
+    Diffusion:
+      type: object
+      properties:
+        title:
+          type: string
+          example: "Nuevos cambios en el cryptobot"
+        body:
+          type: string
+          example: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis hendrerit facilisis. Aenean sit amet arcu nec urna laoreet vehicula nec eget est. Phasellus velit eros, tincidunt vitae magna ac, sagittis auctor massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus porttitor non mi eget posuere."
+        image_link:
+          type: string
+          example: "https://universoabiertoblog.files.wordpress.com/2017/01/aco_bot.jpg"
+    AccountPubSubEvent:
+      type: object
+      properties:
+        message:
+          type: object
+          properties:
+            data:
+              type: object
+              properties:
+                telegram_user_id:
+                  type: integer
+                  example: 1801261524
+                operation_type:
+                  type: string
+                  example: "create/delete/edit"
+                first_name:
+                  type: string
+                  example: "Juan"
+                last_name:
+                  type: string
+                  example: "Perez"
+                email:
+                  type: string
+                  example: "example@gmail.com"
+                username:
+                  type: string
+                  example: "juanpe"
 
-  Chat:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-        example: 67479
-      type:
-        type: "string"
-        format: "string"
-        example: "Private"
-
-  NewsMessage:
-    type: "object"
-    properties:
-      chat_id:
-        type: "integer"
-        format: "int64"
-        example: 145688
-      title:
-        type: "string"
-        format: "string"
-        description: "news title"
-        example: "Ethereum podría destronar al bitcoin en valor de mercado con su última actualización"
-      link:
-        type: "string"
-        format: "string"
-        example: "https://www.eleconomista.es/mercados-cotizaciones/noticias/11684467/03/22/Ethereum-podria-destronar-al-bitcoin-en-valor-de-mercado-con-su-ultima-actualizacion.html"
-
-  InternalServerErrorResponse:
-    type: "object"
-    properties:
-      status:
-        type: "integer"
-        format: "int32"
-        example: 500
-      message:
-        type: "string"
-        example: "internal server error"
-      error:
-        type: "string"
-        example: "internal_server_error"
-      cause:
-        type: "array"
-        items:
-          type: "string"
+            message_id:
+              type: string
+              example: "23523146"
